--- a/modules/custom/users_list/templates/users-list.html.twig
+++ b/modules/custom/users_list/templates/users-list.html.twig
@@ -1,5 +1,5 @@
-<div id="user-list">
-    <form id="user-search-form">
+<div id="users-list">
+    <form id="users-search-form">
         <input type="text" id="search-name" placeholder="Nombre">
         <input type="text" id="search-email" placeholder="Correo">
         <button type="submit">Buscar</button>
