--- a/modules/custom/users_list/templates/users-list.html.twig
+++ b/modules/custom/users_list/templates/users-list.html.twig
@@ -1,4 +1,5 @@
 <div id="users-list">
+    <h2>Desde Twig</h2>
     <form id="users-search-form">
         <input type="text" id="search-name" placeholder="Nombre">
         <input type="text" id="search-email" placeholder="Correo">
