--- a/modules/custom/users_list/templates/users_list.html.twig
+++ b/modules/custom/users_list/templates/users_list.html.twig
@@ -1,5 +1,5 @@
 <div class="users-list">
-    <h2>Lista de Usuarios</h2>
+    <h2>Lista de Usuarios desde twig</h2>
     
     {% if usuarios is empty %}
         <p>No hay usuarios disponibles.</p>
