--- a/modules/custom/users_list/templates/users_list_search.html.twig
+++ b/modules/custom/users_list/templates/users_list_search.html.twig
@@ -1,5 +1,5 @@
 <div class="users-list-search">
-    <h2>Buscar Usuarios</h2>
+    <h2>Buscar Usuarios desde twig</h2>
     
     <form id="users-search-form">
         <input type="text" id="search-name" placeholder="Nombre">
