--- a/modules/custom/users_list/templates/users-list-search.html.twig
+++ b/modules/custom/users_list/templates/users-list-search.html.twig
@@ -1,5 +1,5 @@
 <div class="users-list-search">
-    <h2>Buscar Usuarios desde twig</h2>
+    <h2>Buscar Usuarios desde Twig</h2>
     
     <form id="users-search-form">
         <input type="text" id="search-name" placeholder="Nombre">
@@ -11,3 +11,4 @@
         <p>Introduce criterios de búsqueda y presiona "Buscar".</p>
     </div>
 </div>
+
