--- a/modules/custom/users_list/templates/users-list-search.html.twig
+++ b/modules/custom/users_list/templates/users-list-search.html.twig
@@ -10,5 +10,7 @@
     <div id="users-container">
         <p>Introduce criterios de búsqueda y presiona "Buscar".</p>
     </div>
+
+     <div id="pagination-container"></div>
 </div>
 
