--- a/modules/custom/users_list/templates/users-list-search.html.twig
+++ b/modules/custom/users_list/templates/users-list-search.html.twig
@@ -3,6 +3,8 @@
     
     <form id="users-search-form">
         <input type="text" id="search-name" placeholder="Nombre">
+        <input type="text" id="search-surname1" placeholder="Apellido 1">
+        <input type="text" id="search-surname2" placeholder="Apellido 2">
         <input type="text" id="search-email" placeholder="Correo">
         <button type="submit">Buscar</button>
     </form>
